--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ START HEADER SECTION
     padding-bottom: 6px;
 }
 #header-boxing{
-    background-image:linear-gradient(to right,#87509cb7,#87509cb7), url("../img/background-img.jpg");
+   background-image:linear-gradient(to right,rgba(135, 80, 156, 0.718),rgba(135, 80, 156, 0.718)), url("../img/background-img.jpg");
 }
 .menu{
     float: right;
@@ -155,7 +155,7 @@ START SERVICES SECTION
 =======================*/
 #sec2{
    
-    background-image:linear-gradient(to right,#178cc2b9,#178cc2b9), url("../img/pexels-jessica-lewis-583848.jpg");
+    background-image:linear-gradient(to right,rgba(23, 140, 194, 0.725),rgba(23, 140, 194, 0.725)), url("../img/pexels-jessica-lewis-583848.jpg");
     color: white;
 }
 
@@ -181,7 +181,7 @@ END SERVICES SECTION
 START TEAM SECTION
 =======================*/
 #sec3{
-    background-image:linear-gradient(to left,#e7f1f8bb,#14a58d75), url("../img/bg-2.jpg");
+    background-image:linear-gradient(to left,rgba(231, 241, 248, 0.733),rgba(20, 165, 141, 0.459)), url("../img/bg-2.jpg");
 }
 .service-header h2:before{
     background: #c8d9e5;
@@ -270,7 +270,7 @@ END SKILL SECTION
 START PORTFOLIO SECTION
 =======================*/
 #sec5{
-      background-image:linear-gradient(to right,#ffdd99ca,#ffdd99ca), url("../img/pexels-jessica-lewis-583848.jpg");
+      background-image:linear-gradient(to right,rgba(255, 221, 153, 0.792),rgba(255, 221, 153, 0.792)), url("../img/pexels-jessica-lewis-583848.jpg");
 }
 .portfolio-header h2:before{
       background: #e5c37f;
@@ -315,7 +315,7 @@ END PORTFOLIO SECTION
 START ABOUT SECTION
 =======================*/
 #sec6{
-    background-image:linear-gradient(to right,#d74680a6,#d74680a6), url("../img/background-img.jpg");
+    background-image:linear-gradient(to right,rgba(215, 70, 128, 0.651),rgba(215, 70, 128, 0.651)), url("../img/background-img.jpg");
     color: white;
 }
 .about-header h2::before{
@@ -353,7 +353,7 @@ END ABOUT SECTION
 START TOUCH SECTION
 =======================*/
 #sec7{
-    background: #3c5399fd;
+    background: rgb(60, 83, 153);
     color: white;
 }
 .message-header h2::before{
